fix spacing and fixed height of FeaturedRadioCarousel component

--- a/src/views/HomePage/components/FeaturedRadioCarousel/FeaturedRadioCarousel.module.scss
+++ b/src/views/HomePage/components/FeaturedRadioCarousel/FeaturedRadioCarousel.module.scss
@@ -4,6 +4,6 @@
   width: 100%;
 
   @media screen and (min-width: 1440px) {
-    height: 240px;
+    max-height: 240px;
   }
 }
